--- a/index.html
+++ b/index.html
@@ -40,4 +40,27 @@
     Discriminação: 6%
     Furto/roubo:4%;
     Assédio moral: 4%
-    Roubo ou assalto à mão armada: 2%. <h6>
+    Roubo ou assalto à mão armada: 2%.
+    Afinal, quais são as causas dessa violência?
+As análises de questões que envolvem a violência escolar geralmente são feitas sob a ótica social e/ou psicológica. Entretanto, não é possível definir uma única causa para esta questão: o problema da violência é profundo e complexo.
+
+Há um conjunto de motivos que podem explicar a violência nas escolas, as causas são variadas e dependem do contexto que as instituições estão inseridas.
+
+Especialistas acreditam que o aumento do número de casos de violência nas escolas é reflexo da pandemia. Isso porque durante o ensino remoto, período em que as escolas estavam fechadas, parte das crianças e adolescentes teriam desaprendido a ouvir e controlar emoções, por exemplo.
+
+“A violência é um destes fenômenos que vêm se agravando a partir da pandemia. Agora que as aulas voltaram de forma presencial essa violência acaba eclodindo aqui. Esse adolescente demonstra essa violência que talvez já estava inserido, já se manifestava em outros contextos, acaba emergindo aqui”, comentou o psicólogo Lázaro Júnior em entrevista ao G1.
+
+A alta incidência dos casos de violência em ambiente escolar é o que tem chamado a atenção de especialistas. Ao lembrar de casos de bullying e brigas, o professor Dácar aponta que:
+
+“Infelizmente, pela falta de estrutura, a escola, em vez de ajudar a reduzir os impactos que essa violência teria sobre os adolescentes, acabam potencializando, exatamente porque não é um ambiente adequado”, aponta o professor em depoimento dado ao jornal da USP.
+
+Ações violentas são desencadeadas por motivos diversos, por isso, deve-se levar em consideração a própria realidade vivencia a pelos indivíduos, como o convívio doméstico, familiar e social.
+
+Além dos efeitos pós-pandemia, constata-se que a crescente da violência é resultado da ausência de educação contra formas de intolerância, sobretudo, contra minorias. Dessa forma, violências encontradas na vida social são reproduzidas dentro do ambiente escolar, como o racismo e a LGBTfobia. Segundo Castro Alves, em entrevista ao Correio Braziliense, os currículos escolares deveriam incluir matérias sobre direitos humanos, cidadania e cultura de paz, além disso, acredita que a saúde mental dos alunos não deve ser mais um tabu.
+
+Na avaliação de Betina Barros, pesquisadora do Fórum Brasileiro de Segurança Pública, ataques aos ambientes escolares não eram comuns no Brasil, porém, a frequência teria aumentado a partir de 2018. São diversos os fatores que tornaram a violência mais presente no cotidiano escolar, alguns que entram nessa lista são:
+
+Isolamento social: os estudantes estariam vivendo os efeitos pós pandemia, resultado de meses convivendo fora das salas de aula e dependendo apenas da tecnologia para interações sociais; 
+Exposição à violência: algumas crianças e adolescentes estiveram expostos a violência e maus-tratos nos espaços familiares;
+Tecnologia: o acesso à internet sem mediação de um responsável teria tornado mais fácil o consumo de fóruns da internet, sobretudo na deep web, que disseminam ideias e conteúdos violentos;
+Polarização: a partir desse período, 2018, passou-se a notar uma polarização entre a adoção ou não de medidas sanitárias durante a pandemia, além de uma polarização social e política no país, o que serviu de combustível para ideias extremistas entrarem em pauta.<h6>
